syntax ="proto3";
package pb_auth;
option go_package = "api/proto/pb_auth;pb_auth";

service Auth {
  rpc SignUp(SignUpReq)  returns(SignUpResp);
  rpc SignIn(SignInReq)  returns(SignInResp);
  rpc RefreshToken(RefreshTokenReq) returns(RefreshTokenResp);
  rpc SignOut(SignOutReq) returns(SignOutResp);
}
message SignInReq {
  ACCOUNT_TYPE account_type = 1; // 账户类型 1:手机号 2:lark账户
  PLATFORM_TYPE platform = 2; // 平台
  string account = 3; // 手机号/lark账户
  string uuid = 4; // 设备唯一编号
  string verification_code = 5; // 验证码
  string password = 6; // 密码
}
message RefreshTokenReq {
  string refresh_token = 1; // refresh token
}
message RefreshTokenResp {
  int32 code = 1;
  string msg = 2;
  Token access_token = 3;
  Token refresh_token = 4;
}
message SignOutReq {
  string token = 1; // token
}
message SignOutResp {
  int32 code = 1;
  string msg = 2;
}
message SignInResp {
  int32 code = 1;
  string msg = 2;
  UserInfo user_info = 3;
  Token access_token = 4;
  Token refresh_token = 5;
}
message SignUpReq {
  PLATFORM_TYPE  reg_platform = 1; // 注册平台
  string nickname = 2; // 昵称
  string password = 3; // 密码
  string firstname = 4; // firstname
  string lastname = 5; // lastname
  int32 gender = 6; // 性别
  int64 birth_ts = 7; // 生日
  string email = 8; // Email
  string mobile = 9; // 手机号
  string avatar_key = 10; // 头像
  int64 city_id = 11; // 城市ID
  int64 code = 12; // 验证码
  string udid = 13; // udid
  int64 server_id = 14; // server id
}

message SignUpResp {
  int32 code = 1;
  string msg = 2;
  UserInfo user_info = 3;
  Token access_token = 4;
  Token refresh_token = 5;
}
message Token {
  // @inject_tag: json:"token"
  string token = 1; // 用户token
  // @inject_tag: json:"expire"
  int64  expire = 2; // token过期时间戳（秒）
}
message UserInfo {
  int64 uid = 1; // uid
  string lark_id = 2; // 账户ID
  int32 status = 3; // 用户状态
  string nickname = 4; // 昵称
  string firstname = 5; // firstname
  string lastname = 6; // lastname
  int32 gender = 7; // 性别
  int64 birth_ts = 8; // 生日
  string mobile = 9; // 手机号
  int64 city_id = 10; // 城市ID
  AvatarInfo avatar = 11; // 头像
}
message AvatarInfo {
  int64 owner_id = 1;
  int32 owner_type = 2;
  string avatar_small = 3;
  string avatar_medium = 4;
  string avatar_large = 5;
}
enum PLATFORM_TYPE{
  UNKNOWN_PLATFORM_TYPE = 0;
  IOS = 1;
  ANDROID = 2;
  MAC = 3;
  WINDOWS = 4;
  WEB = 5;
}
enum ACCOUNT_TYPE{
  UNKNOWN_ACCOUNT_TYPE = 0;
  MOBILE = 1; // 手机号登录
  ANTS = 2; // ants账户登录
}